# mai_da_labs_sem5

lab5/: CMakeLists.txt  README.md  Report.odt  summary.cpp
lab5/include/: type_aliases.hpp
lab5/include/suffix_tree/: suffix_node.hpp  suffix_tree.hpp
lab5/include/suffix_tree/impl/: suffix_node.cpp  suffix_tree.cpp
lab5/src/: main.cpp
lab5/test/: CMakeLists.txt  suffix_tree_test.cpp
lab7/: Report.odt  leetcode.cpp
lab7/src/: main.cpp
lab7/test/: CMakeLists.txt
lab8/src/: main.cpp
lab9/: main.cpp
lab_templ/: CMakeLists.txt  Report.odt
lab_templ/cmake/: gtest.cmake
lab_templ/include/: summer.hpp
lab_templ/src/: main.cpp
lab_templ/test/: CMakeLists.txt  summer_test.cpp
